⚠️ - Eliminar informacion, agregado

--- a/views/infectado.ejs
+++ b/views/infectado.ejs
@@ -77,12 +77,19 @@
             class="select-input"
           />
           <div class="btn">
-            <a class="delete_zombie" href="">Delete User</a>
+            <button id="delete_zombie" class="delete_zombie" href="">
+              Delete User
+            </button>
           </div>
         </div>
       </div>
     </div>
   </section>
   <% } %> <% } %>
-  <footer></footer>
+  <footer>Created By<a>:</a> Aqu4x0<a>/</a> Mr.Char with <a>❤</a></footer>
+
+  <!-- Javascript: -->
+
+  <script src="/javascript/DeleteZombie.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
